# scx

./: .gitignore  CITATION.cff  Dockerfile  README.md  prettify.sh  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py  test.sh  update_documentation.sh  update_notebooks.sh
doc_template/: module.html.jinja2
docs/: index.html  optimize.html  scx.html  search.js  statistics.html  utils.html
docs/1.0.7/scx/: optimize.html
docs/1.1.0/: scx.html  search.js
docs/1.1.0/scx/: statistics.html  utils.html
docs/1.2.1/: scx.html  search.js
docs/1.2.1/scx/: database.html  optimize.html  statistics.html
docs/1.3.0/: scx.html  search.js
docs/1.3.0/scx/: database.html  optimize.html  statistics.html
docs/scx/: database.html  optimize.html  statistics.html  utils.html
notebooks/: README.md
notebooks/database/: Transaction.ipynb
notebooks/introduction/: 01_Variables_And_Types.ipynb  02_Operators.ipynb  03_String_Formatting.ipynb  04_Data_Structures.ipynb  05_Data_Structure_Functions.ipynb  06_Looping.ipynb  07_Functions.ipynb  08_Pip_Importing_And_Help.ipynb  09_Methods_And_Classes.ipynb
notebooks/optimization/: 01_simple_optimization.ipynb  02_array_optimization.ipynb  P1.ipynb  P2.ipynb  P3.ipynb  P4.ipynb  P5.ipynb  sudoku.ipynb
scx/: __init__.py  database.py  optimize.py  statistics.py  utils.py
test/: test_optimize_1.py  test_optimize_2.py
test/database/: t1.py
test/optimize/: t1.py  t2.py  t3.py  t4.py  t4a.py  t4b.py  t5.py  t6.py  t7.py  t8.py
test/statistics/: t1.py
utils/: docs.sh  notebooks.sh  prettify.sh  test.sh
(+17 files in other folders)
